src/04/content.css
/* TEXTOS */

.S6 { 

  /* LAYOUT */ text-align: center;
  /* BOX    */ z-index: 1; width: 100%; padding: 1rem 2rem 0rem 2rem; overflow-wrap: break-word;
  /* FILL   */ color: var(--humo);
  /* FONT   */ font-size: 1rem; line-height: 1.5; word-break: break-word;
  
  & img { 

    /* LAYOUT */ display: block; 
    /* BOX    */ max-width: 100%; height: auto; margin: 0rem auto;
    /* BORDER */ border: var(--small-outline) var(--humo25); border-radius: var(--radius-ss);

  }

}

.S6TRAD { 

  /* LAYOUT */ text-align: left;
  /* BOX    */ z-index: 1; width: 100%; padding: 1rem 2rem 0rem 2rem; overflow-wrap: break-word;
  /* FILL   */ color: var(--humo);
  /* FONT   */ font-size: 1rem; line-height: 1.5; word-break: break-word;
  
  & img { 

    /* LAYOUT */ display: block; 
    /* BOX    */ max-width: 100%; height: auto;
    /* BORDER */ border: var(--small-outline) var(--humo25); border-radius: var(--radius-ss);

  }

}

/* DISEÑO */

.S7 { 

  /* BOX    */ z-index: 1; width: 100%; overflow-wrap: break-word;
  /* FILL   */ color: var(--humo);
  /* FONT   */ font-size: 1rem; line-height: 1.5; word-break: break-word;

  & img { 

    /* LAYOUT */ display: block; object-fit: cover;
    /* BOX    */ max-width: 100%; width: 100%; height: auto;

  }

  & video { 

    /* LAYOUT */ display: block; object-fit: cover;
    /* BOX    */ max-width: 100%; width: 100%; height: auto;
    /* BORDER */ border: var(--small-outline) var(--humo25); border-radius: var(--radius-ss);

  }

}

.S7TEXT { 

  /* LAYOUT */ text-align: center;
  /* BOX    */ z-index: 1; width: 100%; padding: 1rem 2rem 0rem 2rem; overflow-wrap: break-word;
  /* FILL   */ color: var(--humo);
  /* FONT   */ font-size: 1rem; line-height: 1.5; word-break: break-word;

  & img { 

    /* LAYOUT */ display: block;
    /* BOX    */ max-width: 100%; height: auto;
    /* BORDER */ border: var(--small-outline) var(--humo25); border-radius: var(--radius-ss);

  }
  
}

.S7TEXT-TRAD { 

  /* LAYOUT */ text-align: left;
  /* BOX    */ z-index: 1; width: 100%; padding: 1rem 2rem 0rem 2rem; overflow-wrap: break-word;
  /* FILL   */ color: var(--humo);
  /* FONT   */ font-size: 1rem; line-height: 1.5; word-break: break-word;

  & img { 

    /* LAYOUT */ display: block;
    /* BOX    */ max-width: 100%; height: auto;
    /* BORDER */ border: var(--small-outline) var(--humo25); border-radius: var(--radius-ss);

  }
  
}

/* EMBEDS */  

.YTVideo { 

  /* LAYOUT */ position: relative; 
  /* BOX    */ width: 100%; height: 100%; aspect-ratio: 16 / 9;
  /* BORDER */ border: var(--small-outline) var(--humo25); border-radius: var(--radius-ss);

}

@container post-viewer (min-width: 0px) { .S6, .S7TEXT { font-size: clamp(0.50rem, 2.25cqw, 1.35rem); } }
@container post-viewer (min-width: 0px) { .S6TRAD, .S7TEXT-TRAD { font-size: 1rem; } }

@media (max-width: 500px) { .S6, .S6TRAD, .S7TEXT, .S7TEXT-TRAD { padding: 0.2rem 0.4rem 0rem 0.4rem; } }

